    - Feature: [veryShortTitle] and [shortTitle] also skip words like "in", "among", "before", ...
    - Feature: New LabelPattern [keywordsN], where N is optional. Returns the first N keywords. If no N is specified ("[keywords]"), all keywords are returned. Spaces are removed.
[dev_2.11]
    - Backports from 2.80: Fix bug #194: JabRef starts again on Win XP and Win Vista
    - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
2.11 beta 4
    - Add of Persian localization (by Behrouz Javanmardi)
    - Backport from 2.80: Fixes #115: Remove whitespaces in serialization
    - Backport from 2.80: Fixes Bug#1297: No console message on closing.
    - Backport from 2.80: Fixes Bug#1290: Spanish localization was not displayed correctly.
    - Backport from 2.80: Fixes #144: Unreadable text in Russian installer
    - Fix for bugs #1221 and #1261 (also partly #1243): order of fields in customized entry types no longer gets destroyed by the entry editor 
    - "ISBN to BibTeX" fetcher now uses eBook.de's API (fixes bug #1241)
    - BREAKING: Search groups now use same search logic as UI --> avoids confusion when converting a UI search into a search group. Behaviour before: contains/regex check of whole search string; behaviour after: contains/regex check of every word of the search string. The new search is more powerful and con simulate the old behaviour: enclose everything in double quotes, e.g., process language --> "process language".
    - Fix for bug #1276: OO styles do not consider editor fields anymore for sorting
    - Fix for bug #1288: Emacs keybindings: Rebinding of C-f can now be configured
    - Special fields: .bib files edited with 2.11 beta 3 are not compatible with this release. Other versions are not affected.
    - JabRef metadata ("jabref-meta") @comments are now always written in alphabetical order